--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "openai": "^5.17.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.3",
     "tailwindcss": "^4",
     "unstorage": "^1.16.1",
     "zod": "^4.0.17"
