--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,9 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
 node_modules
 dist
-dist-ssr
-
-# Editor directories and files
-.idea
+.storage
+logs
+*.log
+.env
+.env.local
+.env.production
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Turbo
-.turbo
-
-# Storage
-*.local
-.storage/
-
-# Quests
-.quests/
-
-# SQLite
-*.db-journal
-*.db-wal
-*.db-shm
-etilqs_*
-
-# Environment variables
-.env*
-!.env.example
-
-# TypeScript cache
-*.tsbuildinfo
