--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "check:types": "tsc --noEmit",
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "pnpm build:server && pnpm build:client",
+    "build:server": "tsc -p tsconfig.server.json && tsc-alias -p tsconfig.server.json",
+    "build:client": "vite build",
+    "start": "NODE_ENV=production node dist/server/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hono/node-server": "^1.19.6",
     "@orpc/client": "^1.8.8",
     "@orpc/server": "^1.8.8",
     "@orpc/tanstack-query": "^1.8.8",
@@ -41,9 +45,12 @@
     "eslint-plugin-react-hooks": "^6.0.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.20.6",
     "typescript": "^5",
     "typescript-eslint": "^8.40.0",
     "vite": "^7.1.3",
+    "vite-plugin-node": "^7.0.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
