--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.5",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "hono": "^4.9.4",
     "jsonrepair": "^3.13.0",
     "jspdf": "^3.0.3",
     "module-alias": "^2.2.3",
-    "openai": "^5.17.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4",
     "unstorage": "^1.16.1",
-    "zod": "^4.0.17"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.0",
